fix: update header text color for improved visibility

--- a/react_intro/task_0/dashboard/src/App.css
+++ b/react_intro/task_0/dashboard/src/App.css
@@ -9,7 +9,7 @@
 }
 
 .App-header h1 {
-  color: #e0454B;
+  color: #e1003c;
 }
 
 .App-body {
